implementations/rust/ockam/ockam_node_test_attribute/tests/node_test/fail_if_passed_param_is_self.stderr
error: Input argument should be of type `ockam::Context`
 --> tests/node_test/fail_if_passed_param_is_self.rs:6:18
  |
6 | async fn my_test(self) -> ockam::Result<()> {}
  |                  ^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/node_test/fail_if_passed_param_is_self.rs:5:1
  |
5 | / #[ockam_node_test_attribute::node_test]
6 | | async fn my_test(self) -> ockam::Result<()> {}
  | |______________________________________________^ consider adding a `main` function to `$DIR/tests/node_test/fail_if_passed_param_is_self.rs`
